# research

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
circom/: .gitignore  README.md  package.json
circom/hash/: hash.circom
circom/merkle-proof/: index.circom
circom/merkle-tree/: index.circom
circom/poseidon/: poseidon.circom
circom/poseidon-proof/: index.circom
circom/preimage-nullifier-proof/: index.circom
circom/preimage-proof/: index.circom
circom/scripts/: generate-proof.js  run-ceremony.sh  utils.js
circom/semaphore-eddsa/: semaphore.circom
circom/semaphore-smt/: semaphore.circom
circom/semaphore-v3/: index.circom  semaphore.circom
circom/semaphore-v4/: index.circom  input.json  semaphore-eddsa.circom  semaphore.circom  tree.circom
javascript/: README.md  build.tsconfig.json  package.json  rollup.config.ts  tsconfig.json
javascript/benchmarks/: batchInsertion.ts  benchmark.ts  incremental-merkle-tree.ts  index.ts  suite.ts  types.ts  utils.ts
javascript/incremental-merkle-tree/: incremental-merkle-tree.test.ts  incremental-merkle-tree.ts
javascript/src/: incremental-merkle-tree.test.ts  incremental-merkle-tree.ts
rust/: Cargo.toml  mt.wasm
rust/src/: main.rs
solidity/: .prettierignore  README.md  hardhat.config.ts  newIncrementalMerkleTree.txt  oldIncrementalMerkleTree.txt  package.json
solidity/contracts/: BinaryMerkleTree.sol  BinaryMerkleTreeTest.sol  MerkleTree.sol  MerkleTreeTest.sol
solidity/tasks/: deploy-binary-merkle-tree.ts  deploy-merkle-tree.ts
solidity/test/: binaryMerkleTreeTest.ts  index.ts  utils.ts  (+1 more)
(+1 files in other folders)
