[package]
name = "mt"
version = "0.1.0"
edition = "2018"

[dependencies]
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
color-eyre = "=0.6.2"
